tests/testfiles/passing/invalid_identifiers/keyword_as_id_static.c
/* Keyword as identifier: static */
int main() {
    int static;
    static = 42;
}